OVULA-30 Add client deny and client grant access workflows
Add the workflows:

* denying a client from getting access
* grants access for a client which generates an grant access document
  in the database.

which are described in section 4.1.2 and 4.1.2.1

--- a/lib/views/auth_endpoint.jade
+++ b/lib/views/auth_endpoint.jade
@@ -29,7 +29,7 @@ body
     p
       | You are here with state #{state}
     
-    form(action='/post', method='POST',id="messageForm")
+    form(action='/grant/access', method='POST',id="messageForm")
       fieldset
         legend #{client}
         input(type="hidden", value="#{client_id}", name="client_id")
@@ -43,4 +43,4 @@ body
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         .form-actions
           button.btn.btn-success(type="submit") Allow
-          a.btn.btn-danger.cancel(href="/auth/cancel/#{client_id}") Cancel
+          a.btn.btn-danger.cancel(href="/deny/access/#{client_id}/#{state}") Cancel
